--- a/css/style.css
+++ b/css/style.css
@@ -3073,3 +3073,5 @@ html.w-mod-js *[data-ix="overlay"] {
 a.w-webflow-badge {
     display: none!important;
 }
+
+#scroll{z-index:2;position:fixed;right:0;bottom:10px;cursor:pointer;width:10%;display:none;-webkit-border-radius:60px;-moz-border-radius:60px;border-radius:60px}
